# explain-bench

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
configs/: boiler.yaml  default.yaml  freqshape.yaml  pam.yaml  seqcombmv.yaml  seqcombuv.yaml  state.yaml  switch.yaml
docs/: index.html  leaderboard.css  leaderboard.js
docs/data/: leaderboard.tsv
leaderboard/: leaderboard.css  leaderboard.js
scripts/: main.py  run_benchmark.py  visualize_results.py
scripts/leaderboard/: make_plots.py  validate.py
src/: __init__.py  benchmark.py  runner.py
src/configs/: default.yaml
src/datasets/: __init__.py  base_dataset.py  boiler.py  common.py  freqshapes.py  helpers.py  pam.py  seqcombmv.py  seqcombuv.py  state_dataset.py  switch_dataset.py  synthetic_dataset.py  ucr_dataset.py
src/datasets/datagen/: gp_utils.py  spike_dataset.py  state_data.py  switch_data.py
src/datasets/handlers/: process_realdata.py  process_synth.py  (+1 more)
src/explanations/: __init__.py  base_explainer.py  deeplift.py  dynamask.py  fit.py  grad.py  ig.py  lime.py  winit.py
src/leaderboard/: aggregate.py  save_run_json.py
src/metrics/: __init__.py  accuracy.py  auc_metrics.py  base_metric.py  comprehensiveness.py  consistency.py  cross_entropy.py  faithfulness.py  stability.py  sufficiency.py
src/models/: __init__.py  base_model.py  lstm.py  transformer.py
src/utils/: logging_utils.py  path_utils.py  plot_samples.py  registry.py  train_utils.py
src/visualization/: plot_utils.py  report.py
tests/: test_dataset.py  test_explainer.py  test_metric.py  test_model.py
(+11 files in other folders)
