[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "explainbench"
version = "0.1.0"
description = "ExplainBench: Benchmarking XAI Methods on Time-Series"
authors = [{name="Your Name", email="you@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "PyYAML",
    "torch>=2.0.0",
    "scikit-learn",
    "matplotlib",
    "tqdm",
    "captum",
]
